--- a/QueryIT/CoreModulForm/Query.resx
+++ b/QueryIT/CoreModulForm/Query.resx
@@ -128,7 +128,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABO
-        FQAAAk1TRnQBSQFMAgEBCwEAAXABAQFwAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        FQAAAk1TRnQBSQFMAgEBCwEAAXgBAQF4AQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -245,19 +245,6 @@
     <value>371, 25</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="alterTableToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAABp0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuMTAw9HKhAAABY0lEQVQ4T6WP
-        y0sCURhH+58CoaKiVeGmVe0FFwkR0UNc9CCiRWgEFaRlVAOVjZKWpEZK9rbJEDEk0k0zOpotXE3mA385
-        s3AxXVNrceDeD75z7m0B8C+Iw2aoHpZsH9DTGYlFSwZz1Dt05jSG11JQGXgMLCShnEmgR8ehW8tWVggC
-        6hrYuijDeF7CiqsIvaOAeWse0/tf0O4IGNkQoFkX0DUaIQsMYv0wg9lKfcyUhnqZx2Cl3DfFoXOSQ9s4
-        i/YJDoqhp5+CA1cQpXKJSK5QRFYogs8WEE/n0dGvqS3wM7Eq4v3s5gWn/ijs3ogkcHqZ3wVy5HXa/VD/
-        Bb7Aq1QWl8Uy7QljzxlC+C0H6iTQ2AvkZXE5EPuE+aiGYNdxJy3K/yyWt+1BbFoZSWCk78kCk8UnCRJ8
-        CnE2hec4j8doEpehBDwMh+NbDrYrtrZglXKjtVcFhVJdF6LgrxCHzUAcNg5avgEtCxRWVqlylQAAAABJ
-        RU5ErkJggg==
-</value>
-  </data>
   <data name="filterToolStripMenuItem1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
@@ -347,6 +334,36 @@
         5vC/eakvGIeWqCMMADknq9cO7DSQE5ExzLmRVWr/M3tN/pfMsgNjnyw5hAEg5yS1mIGdhu4CmHODS+X/
         x7dp/s+YaADGLomiCANAzomq0oE7Dx2D5O2i+NAxIimDnBNUqAJ3HjqGORcbBhMg53hlSMOdh45hzsWG
         wYRtJN9/5wQRbM6EYbBzMfF/BgBmM599qr2D5AAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="hashToolStripMenuItem1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACjElEQVQ4T3WS7UvTURTHf39A
+        aWubUzenv2w60SKXGJpaFjF6sDBbkpiYMopAwr2uNwkZkpllaGimPfpsWqLOqZuW5HwoVMLQRCoqsoGv
+        tGH27Z6byn5iLz5wzj3nc+6FcwUAEtpVm7SMfMYkAytQTGfa9f2SxBpjeNQW7IfJnDP4WX0dC9ZKDsV0
+        ZtX5oy7Qt8HTWQvsScYXc+PjGLlzG7NX0uC6fBhzubEcil03zXBYcvDJ4UDr3mi7ZECz6Hfvm9OJX/Pz
+        LAWGiwrhPBQCZ1wQZ+yYHj3mdPx2u7G8tITvo6No2KFv5QOalJu1L3Ua9Fw4h6XFRc5MRwdqQ8R+VrMQ
+        jQGq1i/9fVhwufBneRkjxbfwPFgNVhOFeqVX/mh2MmayotCdmYrZ7m407ol6TNM9sR41lnwdHMSba3l4
+        n7YLb80pYG6BUKP0mpq2pOBjWgQGE7fhoa+8a728SmNEaIM9Noj3TueeBLnCE4WXeyojGh9O6dEbHwaW
+        X9pIJlgt2xar573kkCtUK7zdE8dDMZGkg+1gFFj+3wGslm3dZ+C95JArVMq9p5yJIt4ZRQycPoD7ar++
+        jWSidndki+1IHO8lh1yhXO6d32EIxFBCAGzmTL7nmoT4+vVymyml9MfYGIbZBvpjNCCHuQVCmXyLtlKj
+        Qmd6qmTPD/Shr1jNQpRr/FtoA6v/ZKjwBirUKrCayKeXqf1LP3vsmW7pzTCh/YSR8/r8WXSZsyT/pDxE
+        10zu2hOf7d/fRLcM5F2FbacPRkzxGL9o4lDsiPRBe2oy/ydVhsjOVW9tAFERHl5VopChLkgGa5gM9oh/
+        UFzPzu4qtqJYqXzq6UgGEEUymcgoYMwwsALFhYzt0n4IfwE5I3wQv2wCFAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="alterTableToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABp0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuMTAw9HKhAAABY0lEQVQ4T6WP
+        y0sCURhH+58CoaKiVeGmVe0FFwkR0UNc9CCiRWgEFaRlVAOVjZKWpEZK9rbJEDEk0k0zOpotXE3mA385
+        s3AxXVNrceDeD75z7m0B8C+Iw2aoHpZsH9DTGYlFSwZz1Dt05jSG11JQGXgMLCShnEmgR8ehW8tWVggC
+        6hrYuijDeF7CiqsIvaOAeWse0/tf0O4IGNkQoFkX0DUaIQsMYv0wg9lKfcyUhnqZx2Cl3DfFoXOSQ9s4
+        i/YJDoqhp5+CA1cQpXKJSK5QRFYogs8WEE/n0dGvqS3wM7Eq4v3s5gWn/ijs3ogkcHqZ3wVy5HXa/VD/
+        Bb7Aq1QWl8Uy7QljzxlC+C0H6iTQ2AvkZXE5EPuE+aiGYNdxJy3K/yyWt+1BbFoZSWCk78kCk8UnCRJ8
+        CnE2hec4j8doEpehBDwMh+NbDrYrtrZglXKjtVcFhVJdF6LgrxCHzUAcNg5avgEtCxRWVqlylQAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <metadata name="queryMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -689,6 +706,23 @@
   <metadata name="QueryerTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>245, 25</value>
   </metadata>
+  <data name="hashToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACjElEQVQ4T3WS7UvTURTHf39A
+        aWubUzenv2w60SKXGJpaFjF6sDBbkpiYMopAwr2uNwkZkpllaGimPfpsWqLOqZuW5HwoVMLQRCoqsoGv
+        tGH27Z6byn5iLz5wzj3nc+6FcwUAEtpVm7SMfMYkAytQTGfa9f2SxBpjeNQW7IfJnDP4WX0dC9ZKDsV0
+        ZtX5oy7Qt8HTWQvsScYXc+PjGLlzG7NX0uC6fBhzubEcil03zXBYcvDJ4UDr3mi7ZECz6Hfvm9OJX/Pz
+        LAWGiwrhPBQCZ1wQZ+yYHj3mdPx2u7G8tITvo6No2KFv5QOalJu1L3Ua9Fw4h6XFRc5MRwdqQ8R+VrMQ
+        jQGq1i/9fVhwufBneRkjxbfwPFgNVhOFeqVX/mh2MmayotCdmYrZ7m407ol6TNM9sR41lnwdHMSba3l4
+        n7YLb80pYG6BUKP0mpq2pOBjWgQGE7fhoa+8a728SmNEaIM9Noj3TueeBLnCE4WXeyojGh9O6dEbHwaW
+        X9pIJlgt2xar573kkCtUK7zdE8dDMZGkg+1gFFj+3wGslm3dZ+C95JArVMq9p5yJIt4ZRQycPoD7ar++
+        jWSidndki+1IHO8lh1yhXO6d32EIxFBCAGzmTL7nmoT4+vVymyml9MfYGIbZBvpjNCCHuQVCmXyLtlKj
+        Qmd6qmTPD/Shr1jNQpRr/FtoA6v/ZKjwBirUKrCayKeXqf1LP3vsmW7pzTCh/YSR8/r8WXSZsyT/pDxE
+        10zu2hOf7d/fRLcM5F2FbacPRkzxGL9o4lDsiPRBe2oy/ydVhsjOVW9tAFERHl5VopChLkgGa5gM9oh/
+        UFzPzu4qtqJYqXzq6UgGEEUymcgoYMwwsALFhYzt0n4IfwE5I3wQv2wCFAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>104</value>
   </metadata>
